# rustp

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  path.txt
