[package]
name = "basicftp"
version = "0.1.0"
edition = "2021"
description = "A Basic library for FTP using Std::net supporting EPSV and basic features as well as read only non authenticated, non-encrypted text based traffic"
license = "MIT"
repository = "https://github.com/marcusasdgg/rustp"

[dependencies]
